# massif-collect

./: Cargo.toml  run-in-tmux.sh
data/: extract_snapshots.py
src/: app.rs  events.rs  graph.rs  indexing.rs  iters.rs  lib.rs  macros.rs  main.rs  parsing.rs  ui.rs
src/components/: call_graph_navigator.rs  mod.rs  navigable_selection.rs
src/ui/: allocation_chart.rs  allocation_graph.rs  call_graph.rs  caller_tree.rs  events.rs  input.rs  mod.rs  snapshot_chart.rs
src/ui/controllers/: call_graph.rs  call_list.rs  caller_tree.rs  mod.rs  selection_list.rs
src/ui/views/: call_graph.rs  caller_tree.rs  mod.rs
