[package]
name = "massif-collect"
version = "0.1.0"
authors = ["Jean-Marie Comets <jean.marie.comets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
petgraph = { git = "https://github.com/jmcomets/petgraph.git", branch = "graphmap-edge-entry" }
tui = { git = "https://github.com/jmcomets/tui-rs.git", branch = "selectable-bar-chart" }
termion = "1.5.3"
clap = "2.33.0"
unicode-width = "0.1.6"
